Fix squished background image

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,6 +11,7 @@
   background-size: 100% 100%;
   width: 100%;
   height: 100%;
+  min-height: 100vh;
   object-fit: contain;
 }
 .about-title{
